test: fix imports, use LinkedHashMap